# Thirdproject_T3

./: .dockerignore  .gitignore  README.md  a.txt  docker-compose.yml  test.txt
.github/workflows/: docker-push.yml  main.yml
ThirdprojectBack/: Dockerfile  docker-compose.yml  pom.xml  structure.txt
ThirdprojectBack/src/main/resources/: application-dev.properties  application-prod.properties  application.properties
ai/: .dockerignore  .gitignore  Dockerfile  docker 빌드 명령어.txt  document_processor.py  poetry 명령어.txt  pyproject.toml  안내서.txt
ai/ai/: config.py  diet_test.ipynb  doc_to_vector.py  graph_builder.py  schema.py  test.ipynb  test_diet_vectorstore.py  todo_test.ipynb  todo_test2.ipynb  todo_test조건분기.ipynb
ai/ai/nodes/: analyze_sleep.py  format_output.py  generate_cheering.py  generate_diet.py  generate_todo.py  search_tip.py  time_check.py
ai/ai/rag/: diet_rag.py  doc_to_vector.py  sleep_rag.py  tip_rag.py
ai/data/: sleep_performance_url.txt  workout_tips.txt
ai/server/: main.py  routes.py  sample_data.txt
docs/: ScreenDesignDoc.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/docker/: nginx.conf
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: auth.js  axios.js  charts.js  diet.js  record.js  todo.js  user.js  userinfo.js
frontend/src/components/: MainModal.jsx
frontend/src/components/charts/: ChangeTrendChart.jsx  UserCompareChart.jsx
frontend/src/components/cheering/: CheeringPopup.css  CheeringPopup.jsx
frontend/src/components/disease/: DiseaseSelector.jsx
frontend/src/components/header/: Header.css  Header.jsx
frontend/src/components/loading/: Loading.css  Loading.jsx
frontend/src/components/login/: login.jsx
frontend/src/components/main/: Calendar.css  Calendar.jsx  MainModal.css  MainModal.jsx  Meal.css  Meal.jsx  Todolist.css  Todolist.jsx  Video.css  Video.jsx
frontend/src/components/profile/: profile.jsx
frontend/src/components/signup/: signup.jsx
frontend/src/components/toast/: ErrToast.jsx  Toast.css  Toast.jsx
frontend/src/pages/: DiseasePage.jsx  GraphPage.css  GraphPage.jsx  LoginPage.css  LoginPage.jsx  MainPage.css  MainPage.jsx  PrivateRoute.jsx  ProfilePage.css  ProfilePage.jsx  SignupPage.css  SignupPage.jsx
frontend/src/utils/: ValueValidation.js
monitoring/: prometheus.yml
(+58 files in other folders)
