[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "TP9NS",email = "pshccxx@gmail.com"}
]
#readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.21,<0.4.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)"
]
[tool.poetry]
packages = [{ include = "ai", from = "." }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"